cros: Fix LoginFeedbackTest.Basic time out

Change:
Make feedback private api use EventRouter::DispatchEventToExtension
when content::IsBrowserSideNavigationEnabled() is true.

BUG=764997
TEST=LoginFeedbackTest.Basic with flag --enable-browser-side-navigation

Change-Id: I3c8e9424a22d1cc1f8a95fe748549a4fec91eb1a
Reviewed-on: https://chromium-review.googlesource.com/667400
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502011}
Former-commit-id: 03d21944e7e483392e2b8f91b365f2eb26bff7a4